# pyga4

./: .buildinfo  .gitignore  LICENSE  README.md  README.zh-TW.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: defualt_issue.yml  sphinx.yml  translate.yml
_modules/: index.html
_modules/google/cloud/bigquery/job/: query.html
_modules/pyga4/analytic/: analytic.html  data_transform.html
_modules/pyga4/model/: bigquery.html
docs/source/: conf.py  index.rst
ga4/analytic/: __init__.py  analytic.py  time_analysis.py
ga4/model/: __init__.py  bigquery.py
pyga4/analytic/: __init__.py  analytic.py  data_transform.py
pyga4/model/: __init__.py  bigquery.py
